[package]
name = "search_create2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
ethers-core = "2.0.0"
hex = "0.4.3"
num-format = "0.4.4"
rayon = "1.7.0"
